Fiks forslag til forbedringer av intellj